
2013-03-11  Tom Hacohen (TAsn)

        * Entry: Fixed a bug with text appending.

2013-03-13  WooHyun Jung

        * Fixed a bug in elm_list. Focus_next is needed only when access mode is enabled.

2013-03-13  Tae-Hwan Kim (bluezery)

        * Fix a memory leak in elm_genlist. Return value of elm_genlist_realized_items_get should be freed

2013-03-15  Jaehwan Kim

        * Add the smart signals in scroller. "scroll,left", "scroll,right", "scroll,up", "scroll,down".

2013-03-18  WooHyun Jung

        * Focus highlight should be reconfigured when theme is changed.

2013-03-19  Jaehwan Kim

        * Fix the elm_shutdown bug in _elm_shutdown_config.
        When the elm_shutdown is used after elm_config_all_flush, the segment fault occur.
        It's why it uses ecore_x in _prop_all_update_cb after removing it.

2013-03-20 Carsten Haitzler (The Rasterman)

        * Fix elm box layout when an item has a max size, and that squashes all
        content even when the minimum size is greater.

2013-03-23 WooHyun Jung

        * Add four more focus directions. ELM_FOCUS_UP/DOWN/RIGHT/LEFT.
        * Add elm_object_focus_next_object_get/set.
        * Add elm_object_focused_object_get.

2013-03-27 Jihoon Kim

        * Add elm_entry_input_panel_layout_variation_set/get API

2013-03-29  ChunEon Park (Hermet)

        * Map supports "language,changed" smart callback.

2013-03-29  Mike Blumenkrantz

        * Fix ctxpopup geometry when parent is an elm_win.

2013-04-01  Jaehwan Kim

        * Scroller decides whether the accelerator is on or not, depending on the velocity and the interval time of the flick event.

2013-04-01  Jaehwan Kim

        * Add the repeat_events_set/get for blocking the events of content objects.
        This feature is useful to the access.

2013-04-01  ChunEon Park (Hermet)

        * Add convenient macros - elm_object_translatable_part_text_set(), elm_object_item_translatable_part_text_set().
