@@ -1204,3 +1204,7 @@
 
         * Add convenient macros - elm_object_translatable_part_text_set(), elm_object_item_translatable_part_text_set().
 
+2013-04-06  Jaehwan Kim
+
+        * Add the API elm_scroller_page_scroll_limit_set/get.
+        It sets the maxium of the movable page at flicking.
